Controller and migrations added

--- a/TextEditor/appsettings.json
+++ b/TextEditor/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-TextEditor-0e656cb3-4e40-4e40-b5de-734cc573e775;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=MCF7842NAS\\SQLSERVER;Initial Catalog=TextEditor_DB;Integrated Security=True;Pooling=False;Encrypt=False;Trust Server Certificate=True"
   },
   "Logging": {
     "LogLevel": {
